# class-generating

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/class_generating/: enumeration.hpp  event.hpp  events.hpp  fixed_string.hpp  generate_class.hpp  generate_member.hpp  member_specification.hpp  method.hpp  reflection.hpp  tags.hpp  type_operations.hpp
include/class_generating/reflection/: name.hpp  required_options.hpp
test/: enumeration.cpp  events.cpp  methods.cpp
